Closed Bug 235311 Opened 22 years ago Closed 22 years ago

Event dialog changes attributes of the calendar event object it is given

Categories

(Calendar :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jku, Assigned: mostafah)

References

Details

User-Agent: Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040206 Firefox/0.8 when args.mode=="new", loadCalendarEventDialog() sets alarm attributes of gEvent to default values (read from preferences). It also does not set the allday checkbox according to gEvent.allDay. loadCalendarEventDialog() should never change values of gEvent (default values should be set somewhere else, possibly when creating the event). loadCalendarEventDialog() should copy all attribute values from gEvent to right places in the dialog. Reproducible: Always Steps to Reproduce:
Blocks: 173562
Fix: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fcalendar&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=02%2F23%2F2004+11%3A40&maxdate=02%2F24%2F2004+11%3A50&cvsroot=%2Fcvsroot Fixed in CVS. Jussi: If you compile the calendar yourself, you should be fine by cvs updating and recompiling, otherwise let me know your platform and Mozilla version so I can email you a new XPI.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
The bugspam monkeys have been set free and are feeding on Calendar :: General. Be afraid for your sanity!
QA Contact: gurganbl → general
You need to log in before you can comment on or make changes to this bug.