Fixed bug 235311: Event dialog changes attributes of the calendar event object it is given